蹂댁븞 媛뺥솕: XSS 諛⑹?, 愿由ъ옄 ?몄쬆 媛쒖꽑, ?⑦궎吏 ?낅뜲?댄듃
- DOMPurify濡?HTML Sanitization ?곸슜
- 愿由ъ옄 ?몄쬆???쒕쾭 ?ъ씠?쒕줈 ?대룞 (?섎뱶肄붾뵫 ?쒓굅)
- Next.js 15.4.7濡??낅뜲?댄듃 (RCE 痍⑥빟???섏젙)
- nodemailer, @clerk/clerk-sdk-node ?낅뜲?댄듃
- CSP ?ㅻ뜑 異붽?
- .npmrc 異붽? (legacy-peer-deps ?ㅼ젙)

--- a/.dockerignore
+++ b/.dockerignore
@@ -23,3 +23,33 @@
 LICENSE
 README.md
 homepage-namoo.tar
+
+# 보안: 의심스러운 파일 패턴 차단
+**/*.sh
+**/*.bash
+**/*.py
+**/*.XIN*
+**/.XIN*
+**/tmp/**
+**/proc/**
+**/cron*
+**/crontab*
+**/.cron*
+**/*miner*
+**/*crypto*
+**/*coin*
+**/*mining*
+**/*malware*
+**/*virus*
+**/*trojan*
+**/*backdoor*
+**/*exploit*
+**/*hack*
+**/*shell*
+**/*payload*
+**/*script*
+**/*.exe
+**/*.bin
+**/*.so
+**/*.dll
+**/*.dylib
