--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.25.4",
     "@headlessui/react": "^2.2.7",
     "@hookform/resolvers": "^5.0.1",
@@ -31,9 +31,9 @@
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.4",
-    "next": "^15.3.1",
+    "next": "^15.4.7",
     "next-intl": "^4.0.2",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
@@ -43,7 +43,9 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "dompurify": "^3.2.2",
+    "isomorphic-dompurify": "^2.11.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -52,6 +54,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/dompurify": "^3.0.5",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
